--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "randomquote",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://jarrodmedrano.github.io/randomquote",
-
+  "homepage": "https://jarrodmedrano.github.io/random-quote",
   "dependencies": {
     "axios": "^0.18.0",
     "gh-pages": "^2.0.1",
@@ -21,7 +20,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -b master -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
